...

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

...
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
    <string name="please_wait_while_backup_will_be_saved">Making a backup, please wait</string>
    <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
...
    <string name="error_occurred_please_try_again">Error occurred, please try again</string>
    <string name="user_photo">The user photo</string>
    <string name="template_message_part_public_key_owner">Public Key for %1$s</string>
    <string name="template_message_part_public_key_fingerprint"><![CDATA[(Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>)]]></string>
    <string name="show_the_public_key">Show the Public Key</string>
    <string name="hide_the_public_key">Hide the Public Key</string>
...
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
...
    <string name="download_attachments_notification_channel">The download attachments notification channel</string>
    <string name="decrypt_error_could_not_open_message">Could not open this message with %1$s.</string>
    <string name="decrypt_error_message_badly_formatted">Message is either badly formatted or not compatible with %1$s.</string>
    <string name="decrypt_error_please_write_me">Please write us at %1$s so that we can fix it for you.</string>
    <string name="your_keys_cannot_open_this_message">Your keys cannot open this message</string>
    <string name="decrypt_error_current_key_cannot_open_message">Your current key cannot open this message. If you
        have any other keys available, you should import them now.</string>
    <string name="from">From</string>
...
        it was encrypted for a wrong key.\n\nMy current public key is attached below. Please update your records and
        send me a new encrypted message.\n\nThank you</string>
    <string name="please_select_key">Please select a key</string>
    <string name="less_secure_login_is_not_allowed">Less secure login is not allowed on your Gmail account. Switching to secure login.</string>
    <string name="error_occurred_try_again_later">An error occurred. Please try again later.</string>
...
    </plurals>
    <string name="hint_when_found_keys_in_email">%1$s found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\nPlease enter pass phrase(s) that you used when the backup was made.</string>
    <string name="forward">Forward</string>
    <string name="forward_encrypted">Forward\nEncrypted</string>
    <string name="reply_encrypted">Reply\nEncrypted</string>
    <string name="reply_all_encrypted">Reply All\nEncrypted</string>
    <string name="forward_template">\n\n---------- Forwarded message ----------\nFrom: %1$s\nDate: %2$s\nSubject: %3$s\nTo: %4$s\n</string>
    <string name="failed_please_try_again_later">Failed. Please try again later</string>
...
    <string name="report_problem">Report problem</string>
    <string name="include_public_key">Include Public Key</string>
    <plurals name="tell_sender_to_update_their_settings">
        <item quantity="one">You should tell the sender to update their settings and send a
        new message.</item>
...
