...
    style="@style/AppWidget.TextInputLayout.PgpBlock.Other"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin_medium">

    <TextView
        android:id="@+id/textViewKeyOwnerTemplate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Public Key for ..........................." />

    <TextView
        android:id="@+id/textViewFingerprintTemplate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/textViewKeyOwnerTemplate"
...
        android:textColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFingerprintTemplate" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchShowPublicKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:checked="false"
        android:switchPadding="@dimen/default_margin_small"
        android:text="@string/show_the_public_key"
        app:layout_constraintBottom_toTopOf="@+id/textViewPgpPublicKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewManualImportWarning" />

    <TextView
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:textColor="#088447"
        android:textIsSelectable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonKeyAction"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchShowPublicKey"
        tools:text="-----BEGIN PGP PUBLIC KEY-----\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\n-----END PGP PUBLIC KEY-----"
        tools:visibility="visible" />

...
