...
                    android:contentDescription="@string/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:srcCompat="@drawable/ic_account_default_photo" />

                <TextView
                    android:id="@+id/textViewSenderAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_content_small"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:layout_marginEnd="@dimen/default_margin_small"
                    android:ellipsize="middle"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/default_text_size_big"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonReplyAll"
                    app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_goneMarginLeft="@dimen/default_margin_medium"
                    tools:text="sender@flowcrypt.com" />

                <ImageButton
...
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_goneMarginRight="@dimen/default_margin_medium"
                    app:srcCompat="@drawable/ic_more_vert_gray_32dp"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textViewSubject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textAlignment="textStart"
                    android:textColor="@color/dark"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewLabels" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray"
...
