<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppWidget.TextInputLayout.PgpBlock.Error"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_medium"
        android:autoLink="web"
        android:textColor="?attr/colorOnSurface"
        android:textIsSelectable="true"
        android:textSize="@dimen/default_text_size_medium"
        tools:text="At nihil sequi quo maiores molestiae consequatur. Id aut nam voluptate doloribus saepe consequatur molestias. Eos sunt est ipsam accusantium saepe doloribus veritatis.


Recusandae velit sit veniam asperiores nisi. Eius tempore ab voluptatum dolorum nihil qui beatae. Et cum au" />

    <Button
        android:id="@+id/buttonImportPrivateKey"
        style="@style/AppWidget.Button.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_marginBottom="@dimen/default_margin_content_small"
        android:text="@string/import_missing_key" />

    <Button
        android:id="@+id/buttonSendOwnPublicKey"
        style="@style/AppWidget.Button.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_marginBottom="@dimen/default_margin_content_small"
        android:text="@string/have_not_any_other_key" />
</LinearLayout>
